Fix #5 and spacing issue with form

--- a/css/style.css
+++ b/css/style.css
@@ -1203,7 +1203,18 @@ body {
   color: #1d1f28;
 }
 .emailContainer h2, .emailContainer label {
+  padding: 0;
   font-weight: bold;
+}
+.emailContainer .row > * {
+  padding: 0;
+}
+.emailContainer .container-md {
+  padding: 0;
+}
+.emailContainer .container-md .row {
+  margin-left: auto;
+  margin-right: auto;
 }
 .emailContainer input {
   height: 3em;
@@ -1211,7 +1222,14 @@ body {
 .emailContainer .emailCol, .emailContainer .nameCol {
   margin-top: 16px;
 }
+.emailContainer .nameCol > * {
+  margin-right: 8px;
+}
+.emailContainer .emailCol > * {
+  margin-left: 8px;
+}
 .emailContainer .checkMarketing {
+  display: flex;
   margin: 0;
   margin-top: 16px;
   padding: 0;
@@ -1219,6 +1237,7 @@ body {
 .emailContainer .checkMarketing input {
   width: 2em;
   height: 2em;
+  display: inline-block;
 }
 .emailContainer .checkMarketing input:focus {
   box-shadow: none;
@@ -1230,7 +1249,7 @@ body {
   border: none;
 }
 .emailContainer .checkMarketing label {
-  font-size: 1em;
+  margin-left: 16px;
 }
 .emailContainer .btn {
   margin-top: 16px;
