--- a/scss/content/_email-form.scss
+++ b/scss/content/_email-form.scss
@@ -14,10 +14,20 @@
     padding:$gutter;
 
     h2, label{
+        padding: 0;
         font-weight: bold;
     }
 
-    .row{
+    .row > *{
+        padding: 0;
+    }
+
+    .container-md{
+        padding: 0;
+        .row{
+            margin-left:auto;
+            margin-right:auto;
+        }
     }
 
     input{
@@ -28,15 +38,24 @@
         margin-top: $gutter;
     }
 
+    .nameCol > *{
+        margin-right: $gutter/2;
+    }
+    .emailCol > *{
+        margin-left: $gutter/2;
+    }
+
+
     .checkMarketing{
 
-
+        display: flex;
         margin: 0;
         margin-top: $gutter;
         padding: 0;
         input{
             width: 2em;
             height: 2em;
+            display: inline-block;
 
             &:focus{
                 box-shadow: none;
@@ -51,8 +70,7 @@
 
         }
         label{
-            font-size: 1em;
-
+            margin-left: $gutter;
         }
     }
 
